Se agrego seo en las secciones html, gitignore, scss, partials

--- a/Secciones/Contacto.html
+++ b/Secciones/Contacto.html
@@ -2,6 +2,9 @@
 <html>
 
 <head>
+    <!-- SEO -->
+    <meta name="keywords" content="contacto, redes, sociales, geek, twitter, instagram, facebook">
+    <meta name="description" content="Contacto directo e informacion sobre las redes sociales">
     <!-- Estilo CSS -->
     <link rel="shortcut icon" href="../Imagenes/Logo.png">
     <link rel="stylesheet" href="../Estilos/style.css">
