--- a/Secciones/Novedades.html
+++ b/Secciones/Novedades.html
@@ -2,6 +2,9 @@
 <html>
 
 <head>
+    <!-- SEO -->
+    <meta name="keywords" content="descuentos, argentina, rebajas, novedades, productos, stock, garantia">
+    <meta name="description" content="Novedades, descuentos y precios totalmente accesibles">
     <!-- Estilo CSS -->
     <link rel="shortcut icon" href="../Imagenes/Logo.png">
     <link rel="stylesheet" href="../Estilos/style.css">
