--- a/Secciones/PreguntasFrecuentes.html
+++ b/Secciones/PreguntasFrecuentes.html
@@ -2,6 +2,9 @@
 <html>
 
 <head>
+    <!-- SEO -->
+    <meta name="keywords" content="compra, preguntas, pago, envío, productos, stock, garantia">
+    <meta name="description" content="Preguntas de envio y pago de la tienda en cordoba capital">
     <!-- Estilo CSS -->
     <link rel="shortcut icon" href="../Imagenes/Logo.png">
     <link rel="stylesheet" href="../Estilos/style.css">
