--- a/Secciones/Productos.html
+++ b/Secciones/Productos.html
@@ -2,6 +2,9 @@
 <html>
 
 <head>
+    <!-- SEO -->
+    <meta name="keywords" content="productos, funkos, anime, gamer, remera, muñecos, taza">
+    <meta name="description" content="Productos de muñecos, remeras, tazas y funkos geek">
     <!-- Estilo CSS -->
     <link rel="shortcut icon" href="../Imagenes/Logo.png">
     <link rel="stylesheet" href="../Estilos/style.css">
