--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 
 <head>
+    <!-- SEO -->
+    <meta name="keywords" content="geek, funkos, anime, serie, cordoba, regalos, videojuegos,">
+    <meta name="description" content="Tienda Geek de anime y videojuegos situada en Argentina Cordoba Capital">
     <!-- Estilo CSS -->
     <link rel="shortcut icon" href="imagenes/Logo.png">
     <link rel="stylesheet" href="Estilos/style.css">
